# rflux

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  _fix_ci.py  clippy.toml  codecov.yml  deny.toml  pyproject.toml  pyrightconfig.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  support_request.md
.github/workflows/: ci.yml  ci.yml.head  ci.yml.tail  release.yml
crates/cli/: Cargo.toml
crates/cli/examples/: sfq_analysis.rs  sfq_design_flow.rs
crates/cli/src/: main.rs
crates/drc/: Cargo.toml
crates/drc/src/: lib.rs
crates/drc/tests/: drc_integration.rs
crates/extract/: Cargo.toml
crates/extract/src/: lib.rs
crates/flow/: Cargo.toml
crates/flow/benches/: compile_layout_bench.rs
crates/flow/src/: bias_grid.rs  clock_tree.rs  lib.rs
crates/flow/tests/: benchmarks.rs  end_to_end_layout.rs  full_pipeline.rs
crates/flow/tests/fixtures/: iscas_c17.bench  iscas_c432.bench  majority_chain.bench  nand_chain.bench  simple_pipeline.bench
crates/hdl/: Cargo.toml
crates/io/: Cargo.toml
crates/io/src/: gds.rs  layout_svg.rs  lib.rs
crates/ir/: Cargo.toml
crates/margin/: Cargo.toml
crates/margin/src/: lib.rs
crates/place/: Cargo.toml
crates/py/: Cargo.toml
crates/py/src/: lib.rs
crates/route/: Cargo.toml
crates/sat/: Cargo.toml
crates/sat/src/: cdcl.rs  dimacs.rs  dpll.rs  lib.rs  types.rs
crates/sat/tests/: dimacs_end_to_end.rs  unit_api.rs
crates/sat/tests/fixtures/: sat_3var_implication.cnf  sat_exactly_one_4.cnf  sat_wrapped_multiclause.cnf  unsat_pigeonhole_3_2.cnf  unsat_unit_contradiction.cnf
crates/sim/: Cargo.toml
crates/synth/: Cargo.toml
crates/synth/benches/: equivalence_bench.rs
crates/synth/src/: bool_opt.rs  lib.rs
crates/synth/tests/: end_to_end_classic_examples.rs  io_smoke.rs  quaigh_alignment_fixtures.rs  sequential_alignment_fixtures.rs
crates/synth/tests/fixtures/classic_examples/: classic_and8_chain.json  classic_dual_product4.json  classic_full_adder.json  classic_majority3.json  classic_mux4_tree.json  classic_mux8_tree.json  classic_ripple_adder4.json  classic_xor8_chain.json
crates/synth/tests/fixtures/quaigh_alignment/: absorb_and_subset.json  absorb_or_subset.json  andn4_chain_from_bench.json  aoi211_from_bench.json  aoi21_from_bench.json  aoi221_from_bench.json  aoi2221_from_bench.json  aoi222_from_bench.json  aoi22_from_bench.json  aoi311_from_bench.json  aoi31_from_bench.json  aoi321_from_bench.json  aoi322_from_bench.json  aoi421_from_bench.json  aoi422_from_bench.json  aoi431_from_bench.json  aoi432_from_bench.json  aoi433_from_bench.json  aoi441_from_bench.json  aoi442_from_bench.json  aoi443_from_bench.json  aoi444_from_bench.json  consensus_and_redundancy.json  consensus_or_redundancy.json  dedup_and_pair.json  dedup_and_pair_from_bench.json  dff_basic_from_bench.json  dff_dffe_mismatch_lhs_from_bench.json  dff_dffe_mismatch_rhs_from_bench.json  dffe_clock_wrapped.json  dffe_feedback_wrapped.json  dffe_inverted_clock_wrapped.json  dffe_inverted_wrapped.json  factor_and_of_or_common_term.json  factor_or_of_and_common_term.json  factor_then_mux_from_and_pattern.json  factor_then_mux_from_or_pattern.json  factor_then_xor_from_and_pattern.json  factor_then_xor_from_or_pattern.json  flatten_and_deep.json  (+31 more)
crates/synth/tests/fixtures/quaigh_alignment/bench/: andn4_chain.bench  aoi21.bench  aoi211.bench  aoi22.bench  aoi221.bench  aoi222.bench  aoi2221.bench  aoi31.bench  aoi311.bench  aoi321.bench  aoi322.bench  aoi421.bench  aoi422.bench  aoi431.bench  aoi432.bench  aoi433.bench  aoi441.bench  aoi442.bench  aoi443.bench  aoi444.bench  dedup_and_pair.bench  iscas_c17.bench  majority3.bench  nand_nor_pair.bench  oai21.bench  oai211.bench  oai22.bench  oai221.bench  oai222.bench  oai2221.bench  oai31.bench  oai311.bench  oai321.bench  oai322.bench  oai421.bench  oai422.bench  oai431.bench  oai432.bench  oai433.bench  oai441.bench  (+6 more)
crates/synth/tests/fixtures/quaigh_alignment/bench_sequential/: dff_basic.bench  dff_dffe_mismatch_lhs.bench  dff_dffe_mismatch_rhs.bench
crates/tech/: Cargo.toml
crates/timing/: Cargo.toml
crates/timing/src/: lib.rs
crates/timing/tests/: timing_integration.rs
crates/verify/: Cargo.toml
crates/verify/src/: lib.rs
crates/verify/tests/: verify_integration.rs
crates/verilog/: Cargo.toml
crates/wasm/: Cargo.toml  README.md
crates/wasm/examples/: index.html
crates/wasm/src/: lib.rs
docs/: SFQ-EDA-Deep-Dive.md  SFQ-EDA-Improvement-Plan.md  alignment-scorecard-weekly-2026-05-28.md  alignment-scorecard-weekly-template.md  alignment-scorecard.md  benchmark-correlation-plan.md  commercialization-roadmap.md  diagnostics.md  error-codes.md  external-command-policy.md  full-alignment-plan.md  interface-inventory.md  josim-parity.md  known-limitations.md  linux-waveform-baseline-promotion-playbook.md  ownership-matrix.md  pdk-onboarding.md  phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5-workflow.md  phase-5.md  phase-6-sim.md  phase-b-execution-checklist.md  phase-b-run-record-2026-05-28.md  phase-b-run-record-template.md  product-scope.md  professional-capability-roadmap-v1.md  project-design.md  quaigh-alignment.md  release-artifact-readiness-checklist.md  release-notes-template.md  release-policy.md  release-review-record-template.md  security-compliance.md  sfq.md  sim-release-readiness-checklist.md  support-matrix.md  (+5 more)
docs/archive/: README.md  alignment-change-summary-2026-05-29.md  alignment-scorecard-weekly-2026-05-29.md  alignment-scorecard-weekly-template.md  alignment-scorecard.md  capability-improvement-execution-plan-2026-05-31.md  cli-performance-baseline-promotion-playbook.md  commercialization-roadmap.md  defect-severity-sla.md  engine-integration-contract.md  external-command-policy.md  full-alignment-plan.md  interface-inventory.md  non-linux-progress-2026-05-29.md  phase-b-run-record-2026-05-29.md  phase-e-execution-checklist.md  (+9 more)
(+299 files in other folders)
