[workspace]
members = [
	"crates/cli",
	"crates/ir",
	"crates/margin",
	"crates/sat",
	"crates/sim",
	"crates/synth",
	"crates/timing",
	"crates/tech",
	"crates/io",
	"crates/hdl",
	"crates/verify",
	"crates/flow",
	"crates/place",
	"crates/route",
	"crates/extract",
	"crates/drc",
	"crates/py",
	"crates/verilog",
	"crates/wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["rflux contributors"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
pyo3 = { version = "0.29", features = ["extension-module"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
rand = "0.8"
