[package]
name = "rflux-extract"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rflux-ir = { path = "../ir" }
rflux-tech = { path = "../tech" }
rflux-route = { path = "../route" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror.workspace = true
