[package]
name = "rflux-flow"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rflux-io = { path = "../io" }
rflux-ir = { path = "../ir" }
rflux-place = { path = "../place" }
rflux-route = { path = "../route" }
rflux-extract = { path = "../extract" }
rflux-sim = { path = "../sim" }
rflux-synth = { path = "../synth" }
rflux-tech = { path = "../tech" }
rflux-timing = { path = "../timing" }
rflux-drc = { path = "../drc" }
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "compile_layout_bench"
harness = false
