[package]
name = "rflux-io"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
libreda-db = "0.0.12"
libreda-lefdef = "0.0.5"
rflux-ir = { path = "../ir" }
rflux-sim = { path = "../sim" }
rflux-tech = { path = "../tech" }
rflux-verilog = { path = "../verilog" }
serde.workspace = true
serde_json.workspace = true
serde_yaml = { workspace = true, optional = true }
thiserror.workspace = true

[features]
yaml = ["serde_yaml", "rflux-tech/yaml"]
