[package]
name = "rflux-py"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace = true
rflux-flow = { path = "../flow" }
rflux-ir = { path = "../ir" }
rflux-io = { path = "../io" }
rflux-margin = { path = "../margin" }
rflux-place = { path = "../place" }
rflux-route = { path = "../route" }
rflux-sim = { path = "../sim" }
rflux-synth = { path = "../synth" }
rflux-tech = { path = "../tech" }
rflux-timing = { path = "../timing" }
rflux-verify = { path = "../verify" }
serde_json.workspace = true

[package.metadata.maturin]
name = "rflux._core"
