[package]
name = "rflux-synth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rflux-ir = { path = "../ir" }
rflux-sat = { path = "../sat" }
rflux-tech = { path = "../tech" }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
rflux-io = { path = "../io" }
rflux-verify = { path = "../verify" }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "equivalence_bench"
harness = false

