[package]
name = "rflux-timing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rflux-ir = { path = "../ir" }
rflux-route = { path = "../route" }
rflux-tech = { path = "../tech" }
rflux-extract = { path = "../extract" }
serde = { workspace = true }
thiserror.workspace = true
rand.workspace = true
rayon = { workspace = true, optional = true }

[features]
parallel = ["rayon"]
