[package]
name = "rflux-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WebAssembly bindings for rflux SFQ EDA toolkit"

[lib]
crate-type = ["cdylib", "rlib"]
name = "rflux_wasm"

[dependencies]
rflux-ir = { path = "../ir", version = "0.1.0" }
rflux-tech = { path = "../tech", version = "0.1.0" }
rflux-synth = { path = "../synth", version = "0.1.0" }
rflux-place = { path = "../place", version = "0.1.0" }
rflux-route = { path = "../route", version = "0.1.0" }
rflux-flow = { path = "../flow", version = "0.1.0" }
rflux-timing = { path = "../timing", version = "0.1.0" }
rflux-verify = { path = "../verify", version = "0.1.0" }
rflux-io = { path = "../io", version = "0.1.0" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
serde_json.workspace = true
console_error_panic_hook = { version = "0.1", optional = true }
log = { version = "0.4", features = ["std"] }
console_log = { version = "1.0", optional = true }

[features]
default = ["console_log"]
dev = ["console_error_panic_hook"]
